# SDK-1.1M

./: SDK_Keyboard.rar  meson.build
SDK_Buzzer/: .cproject  SDK_Buzzer.ioc
SDK_Buzzer/Core/Inc/: stm32f4xx_hal_conf.h
SDK_Buzzer/Core/Src/: main.c
SDK_FreeRTOS/: .cproject  .mxproject  SDK_FreeRTOS Debug.launch  SDK_FreeRTOS.ioc  mx.scratch
SDK_FreeRTOS/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
SDK_FreeRTOS/Core/Src/: freertos.c  gpio.c  main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
SDK_Keyboard/: .mxproject  SDK_Keyboard.ioc  mx.scratch
SDK_Keyboard/Inc/: stm32f4xx_hal_conf.h
SDK_Keyboard/Src/: kb.c  main.c
SDK_LED/: .cproject
SDK_LED/Debug/: makefile
SDK_OLED/: .cproject  .project
SDK_OLED/Debug/: SDK_OLED.elf  SDK_OLED.hex  SDK_OLED.list  SDK_OLED.map  makefile  objects.list  sources.mk
SDK_OLED/Debug/Core/Src/: fonts.d  gpio.cyclo  gpio.d  gpio.su  i2c.cyclo  i2c.d  i2c.su  main.cyclo  main.d  main.su  oled.cyclo  oled.d  oled.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.d  stm32f4xx_hal_msp.su  stm32f4xx_it.cyclo  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  system_stm32f4xx.cyclo  system_stm32f4xx.d  system_stm32f4xx.su  usart.cyclo  usart.d  usart.su
SDK_TIM/: .cproject
SDK_TIM/Debug/: SDK_TIM.elf  SDK_TIM.list  SDK_TIM.map  makefile  objects.list
SDK_TIM/Debug/Core/Src/: gpio.d  main.cyclo  main.d  main.su  stm32f4xx_hal_msp.d  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk  tim.d  (+2 more)
include/: api.h  cache.h
prog1/: main.cpp  meson.build
src/: api.cpp  cache.cpp  main.cpp
(+45 files in other folders)
